crates/language-v2/tests/src/fail/p4_unreachabe_items/unreachable/test.stderr
error: Item 'Baz1' is not reachable from grammar root.
  --> src/fail/p4_unreachabe_items/unreachable/test.rs:20:31
   |
20 |                 Struct(name = Baz1, fields = (field = Required(Baz2))),
   |                               ^^^^

error: Item 'Baz2' is not reachable from grammar root.
  --> src/fail/p4_unreachabe_items/unreachable/test.rs:21:31
   |
21 |                 Struct(name = Baz2, fields = (field = Required(Baz1)))
   |                               ^^^^
